# gemini-army

./: .gitignore  README.md  pyproject.toml
gemini_army/: config.py  main.py  master.py  slave.py
