[project]
name = "gemini-army"
version = "0.1.0"
description = "A multi-agent CLI for Gemini."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/user/gemini-army"
"Bug Tracker" = "https://github.com/user/gemini-army/issues"

[project.scripts]
gemini-army = "gemini_army.main:main"
